@@ -82,9 +82,9 @@ public class ProposalTest {
     assertThat(decodedProposal.getAuthor()).isEqualTo(addr);
     assertThat(decodedProposal.getMessageType()).isEqualTo(QbftV1.PROPOSAL);
     assertThat(decodedProposal.getPrepares()).hasSize(1);
-    assertThat(decodedProposal.getPrepares().get(0)).isEqualToComparingFieldByField(prepare);
+    assertThat(decodedProposal.getPrepares().getFirst()).isEqualToComparingFieldByField(prepare);
     assertThat(decodedProposal.getRoundChanges()).hasSize(1);
-    assertThat(decodedProposal.getRoundChanges().get(0))
+    assertThat(decodedProposal.getRoundChanges().getFirst())
         .isEqualToComparingFieldByField(roundChange);
     assertThat(decodedProposal.getSignedPayload().getPayload().getProposedBlock()).isEqualTo(BLOCK);
     assertThat(decodedProposal.getSignedPayload().getPayload().getRoundIdentifier())
